--- a/package.json
+++ b/package.json
@@ -4,29 +4,29 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
-    "sass": "^1.86.0",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
+    "bootstrap": "^5.3.8",
+    "sass": "^1.95.0",
+    "vue": "^3.5.25",
+    "vue-router": "^4.6.3",
     "vue3-smooth-scroll": "^0.8.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "@vitejs/plugin-vue": "^5.2.3",
+    "@eslint/js": "^9.39.1",
+    "@vitejs/plugin-vue": "^6.0.2",
     "@vue/eslint-config-prettier": "^10.2.0",
-    "eslint": "^9.22.0",
-    "eslint-plugin-vue": "~10.0.0",
-    "globals": "^16.0.0",
-    "prettier": "3.5.3",
-    "sass-embedded": "^1.86.0",
-    "vite": "^6.2.2",
-    "vite-plugin-vue-devtools": "^7.7.2"
+    "eslint": "^9.39.1",
+    "eslint-plugin-vue": "~10.6.2",
+    "globals": "^16.5.0",
+    "prettier": "3.7.4",
+    "sass-embedded": "^1.93.3",
+    "vite": "^7.2.7",
+    "vite-plugin-vue-devtools": "^8.0.5"
   }
 }
