--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "package.json",
-  "version": "2.1.1",
+  "name": "portfolio-page",
+  "version": "2.2.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -12,21 +12,21 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
-    "sass": "^1.95.0",
-    "vue": "^3.5.25",
-    "vue-router": "^4.6.3",
+    "sass": "^1.97.1",
+    "vue": "^3.5.26",
+    "vue-router": "^4.6.4",
     "vue3-smooth-scroll": "^0.8.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@vitejs/plugin-vue": "^6.0.2",
+    "@eslint/js": "^9.39.2",
+    "@vitejs/plugin-vue": "^6.0.3",
     "@vue/eslint-config-prettier": "^10.2.0",
-    "eslint": "^9.39.1",
+    "eslint": "^9.39.2",
     "eslint-plugin-vue": "~10.6.2",
     "globals": "^16.5.0",
     "prettier": "3.7.4",
-    "sass-embedded": "^1.93.3",
-    "vite": "^7.2.7",
+    "sass-embedded": "^1.97.1",
+    "vite": "^7.3.0",
     "vite-plugin-vue-devtools": "^8.0.5"
   }
 }
